--- a/doc/tese/src/tex/02-mokp.tex
+++ b/doc/tese/src/tex/02-mokp.tex
@@ -68,7 +68,7 @@ A Figura~\ref{fig:eff-def} ilustra o conceito de conjunto Pareto.
 As soluções sobre o traçado em destaque representam um \paretoset{} por
 dominarem todas as outras soluções sob a área hachurada.
 
-\begin{figure}[H]
+\begin{figure}[h]
     \centering
     \begin{subfigure}[t]{0.3\textwidth}
         \includegraphics[width=\textwidth]{img/mokp/dom-def}
@@ -87,7 +87,7 @@ dominarem todas as outras soluções sob a área hachurada.
 
 Convém ressaltar que para problemas multiobjetivo não existe, ou é desconhecida,
 qualquer função que agregue os valores de objetivo em um único valor,
-caso contrário, o problema poderia ser tratado como um problema de 
+caso contrário, o problema poderia ser tratado como um problema de
 otimização escalar.
 Sendo assim, a decisão de qual solução será utilizada,
 ou quais soluções serão utilizadas, está fora do escopo de resolução.
@@ -97,7 +97,7 @@ ou quais soluções serão utilizadas, está fora do escopo de resolução.
 %%%%%%%%%%%%%%%%%%%%%%%%%
 Um dos problemas multiobjetivos mais estudados
 é o problema da mochila multiobjetivo, \emph{multiobjective knapsack problem} em inglês (\mokp{}).
-Diversos problemas reais podem ser modelados como uma instância do \mokp{}, tais 
+Diversos problemas reais podem ser modelados como uma instância do \mokp{}, tais
 como seleção de projetos~\cite{teng1996multiobjective},
 orçamento de capital~\cite{rosenblatt1989generating},
 carregamento de carga~\cite{teng1996multiobjective}
